// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alert component snapshots > renders Alert with custom className 1`] = `
<div
  class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground bg-background text-foreground custom-class"
  role="alert"
>
  <h5
    class="mb-1 font-medium leading-none tracking-tight"
  >
    Custom Alert
  </h5>
  <div
    class="text-sm [&_p]:leading-relaxed"
  >
    Custom alert message.
  </div>
</div>
`;

exports[`Alert component snapshots > renders Alert with default variant 1`] = `
<div
  class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground bg-background text-foreground"
  role="alert"
>
  <h5
    class="mb-1 font-medium leading-none tracking-tight"
  >
    Alert Title
  </h5>
  <div
    class="text-sm [&_p]:leading-relaxed"
  >
    This is an alert message.
  </div>
</div>
`;

exports[`Alert component snapshots > renders Alert with destructive variant 1`] = `
<div
  class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 border-destructive/50 text-destructive dark:border-destructive [&>svg]:text-destructive"
  role="alert"
>
  <h5
    class="mb-1 font-medium leading-none tracking-tight"
  >
    Error
  </h5>
  <div
    class="text-sm [&_p]:leading-relaxed"
  >
    Something went wrong.
  </div>
</div>
`;

exports[`Alert component snapshots > renders AlertDescription standalone 1`] = `
<div
  class="text-sm [&_p]:leading-relaxed"
>
  Description Only
</div>
`;

exports[`Alert component snapshots > renders AlertTitle standalone 1`] = `
<h5
  class="mb-1 font-medium leading-none tracking-tight"
>
  Title Only
</h5>
`;
